--- a/src/main/java/com/quanlysieuthi/quanlysieuthimini/view/BanHang.fxml
+++ b/src/main/java/com/quanlysieuthi/quanlysieuthimini/view/BanHang.fxml
@@ -10,21 +10,86 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1530.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <top>
             <AnchorPane prefHeight="51.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Label layoutX="437.0" layoutY="14.0" text="Thông Tin Bán Hàng">
-                     <font>
-                        <Font name="Arial Bold Italic" size="24.0" />
-                     </font>
-                  </Label>
+                  <GridPane layoutX="193.0" layoutY="-8.0" prefHeight="51.333333333333336" prefWidth="1200.6666666666667" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="0.0" prefWidth="119.99997202555338" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="1081.3333358764648" minWidth="10.0" prefWidth="297.9999999999999" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="1081.3333358764648" minWidth="10.0" prefWidth="254.99995930989587" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="1081.3333358764648" minWidth="10.0" prefWidth="294.9999694824219" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="923.6666666666667" minWidth="10.0" prefWidth="249.33336130777994" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <FontAwesomeIconView glyphName="ARROW_LEFT" layoutX="14.0" layoutY="37.0" size="32" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4">
+                           <children>
+                              <Label layoutX="64.0" layoutY="12.0" text="KHÁCH HÀNG">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <graphic>
+                                    <FontAwesomeIconView glyphName="USER" size="30" />
+                                 </graphic>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
+                           <children>
+                              <Label layoutX="111.0" layoutY="12.0" text="SẢN PHẨM">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <graphic>
+                                    <FontAwesomeIconView glyphName="CART_PLUS" size="30" />
+                                 </graphic>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3">
+                           <children>
+                              <Label layoutX="89.0" layoutY="12.0" text="KHUYẾN MÃI">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <graphic>
+                                    <FontAwesomeIconView glyphName="TAGS" size="30" />
+                                 </graphic>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                           <children>
+                              <Label layoutX="124.0" layoutY="10.0" text="Tìm kiếm">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <graphic>
+                                    <FontAwesomeIconView glyphName="SEARCH" size="32" />
+                                 </graphic>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </GridPane>
                </children>
             </AnchorPane>
          </top>
@@ -36,7 +101,7 @@
                         <Font name="Arial Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtTen" layoutX="129.0" layoutY="27.0" />
+                  <TextField fx:id="txtTen" layoutX="129.0" layoutY="27.0" prefHeight="25.0" prefWidth="167.0" />
                   <Label layoutX="17.0" layoutY="79.0" text="Đơn vị tính:" AnchorPane.topAnchor="79.0">
                      <font>
                         <Font name="Arial Bold" size="14.0" />
@@ -48,13 +113,13 @@
                         <Font name="Arial Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtGiaNhap" layoutX="129.0" layoutY="116.0" prefHeight="25.0" prefWidth="103.0" AnchorPane.topAnchor="116.0" />
+                  <TextField fx:id="txtGiaNhap" layoutX="129.0" layoutY="116.0" prefHeight="25.0" prefWidth="141.0" AnchorPane.topAnchor="116.0" />
                   <Label layoutX="17.0" layoutY="209.0" text="SLSP hiện có:" AnchorPane.topAnchor="209.0">
                      <font>
                         <Font name="Arial Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtSLTon" layoutX="130.0" layoutY="209.0" prefHeight="25.0" prefWidth="43.0" AnchorPane.topAnchor="209.0" />
+                  <TextField fx:id="txtSLTon" layoutX="130.0" layoutY="210.0" prefHeight="25.0" prefWidth="61.0" AnchorPane.topAnchor="210.0" />
                   <Label layoutX="18.0" layoutY="257.0" text="Số lượng nhập:" AnchorPane.topAnchor="257.0">
                      <font>
                         <Font name="Arial Bold" size="14.0" />
@@ -65,27 +130,27 @@
                         <Font name="Arial Bold" size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtChietKhau" layoutX="130.0" layoutY="307.0" prefHeight="25.0" prefWidth="56.0" AnchorPane.topAnchor="307.0" />
+                  <TextField fx:id="txtChietKhau" layoutX="130.0" layoutY="307.0" prefHeight="25.0" prefWidth="59.0" AnchorPane.topAnchor="307.0" />
                   <Label layoutX="14.0" layoutY="167.0" text="Giá Bán:" AnchorPane.topAnchor="167.0">
                      <font>
                         <Font name="Arial Bold" size="14.0" />
                      </font>
                   </Label>
 
-                  <TextField fx:id="txtGiaBan" layoutX="129.0" layoutY="162.0" AnchorPane.topAnchor="162.0" />
+                  <TextField fx:id="txtGiaBan" layoutX="129.0" layoutY="162.0" prefHeight="25.0" prefWidth="141.0" AnchorPane.topAnchor="162.0" />
 
-                  <Label layoutX="9.0" layoutY="383.0" text="Thành Tiền:">
+                  <Label layoutX="3.0" layoutY="383.0" text="Thành Tiền:">
                      <font>
                         <Font name="Arial Bold" size="14.0" />
                      </font>
                   </Label>
                   <Spinner fx:id="txtSL" layoutX="130.0" layoutY="256.0" prefHeight="30.0" prefWidth="61.0" />
-                  <Label layoutX="193.0" layoutY="271.0" text="\%">
+                  <Label layoutX="197.0" layoutY="315.0" text="\%">
                      <font>
                         <Font name="Arial Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lbThanhTien" layoutX="90.0" layoutY="383.0" text="Thành Tiền:">
+                  <Label fx:id="lbThanhTien" layoutX="83.0" layoutY="383.0" prefHeight="16.0" prefWidth="97.0" text="Thành Tiền:">
                      <font>
                         <Font name="Arial Bold" size="14.0" />
                      </font>
@@ -101,11 +166,11 @@
          <center>
             <AnchorPane prefHeight="451.0" prefWidth="759.0" BorderPane.alignment="CENTER">
                <children>
-                  <ScrollPane layoutX="28.0" layoutY="-1.0" prefHeight="425.0" prefWidth="865.0">
+                  <ScrollPane layoutY="-1.0" prefHeight="425.0" prefWidth="949.0">
                     <content>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="418.0" prefWidth="866.0">
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="418.0" prefWidth="946.0">
                            <children>
-                              <TableView fx:id="tbSanPham" layoutX="223.0" layoutY="109.0" prefHeight="418.0" prefWidth="866.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <TableView fx:id="tbSanPham" layoutX="223.0" layoutY="109.0" prefHeight="418.0" prefWidth="957.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-11.0" AnchorPane.topAnchor="0.0">
                                 <columns>
                                   <TableColumn prefWidth="75.0" text="C1" />
                                   <TableColumn prefWidth="75.0" text="C2" />
@@ -121,7 +186,7 @@
          <bottom>
             <AnchorPane prefHeight="219.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
                <children>
-                  <Pane layoutY="-2.0" prefHeight="200.0" prefWidth="442.0">
+                  <Pane layoutY="-2.0" prefHeight="221.0" prefWidth="411.0">
                      <children>
                         <Button fx:id="btnXoaTrang" alignment="BASELINE_LEFT" layoutX="232.0" layoutY="32.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Nhập Lại">
                            <font>
@@ -144,24 +209,24 @@
                               <Font name="Arial Bold" size="18.0" />
                            </font>
                            <graphic>
-                              <FontAwesomeIconView glyphName="CASH-REGISTER" />
+                              <FontAwesomeIconView glyphName="CREDIT_CARD" />
                            </graphic>
                         </Button>
-                        <Label layoutX="76.0" layoutY="109.0" text="Tổng Tiền: ">
+                        <Label layoutX="33.0" layoutY="109.0" text="Tổng Tiền: ">
                            <font>
                               <Font name="Arial Bold" size="14.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txtTongTien" disable="true" layoutX="189.0" layoutY="104.0" />
+                        <TextField fx:id="txtTongTien" disable="true" layoutX="131.0" layoutY="105.0" prefHeight="25.0" prefWidth="251.0" />
                      </children>
                   </Pane>
-                  <Pane layoutX="419.0" layoutY="-2.0" prefHeight="222.0" prefWidth="781.0">
+                  <Pane layoutX="420.0" layoutY="-2.0" prefHeight="222.0" prefWidth="1112.0">
                      <children>
-                        <ScrollPane layoutX="-8.0" layoutY="-1.0" prefHeight="225.0" prefWidth="789.0">
+                        <ScrollPane layoutX="-8.0" layoutY="-1.0" prefHeight="225.0" prefWidth="1120.0">
                           <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="223.0" prefWidth="791.0">
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="223.0" prefWidth="1115.0">
                                  <children>
-                                    <TableView layoutX="62.0" layoutY="47.0" prefHeight="223.33333333333334" prefWidth="791.3333333333334" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <TableView layoutX="62.0" layoutY="47.0" prefHeight="223.0" prefWidth="1119.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-328.0" AnchorPane.topAnchor="0.0">
                                       <columns>
                                         <TableColumn prefWidth="75.0" text="C1" />
                                         <TableColumn prefWidth="75.0" text="C2" />
@@ -176,6 +241,52 @@
                </children>
             </AnchorPane>
          </bottom>
+         <right>
+            <AnchorPane prefHeight="429.0" prefWidth="273.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label layoutX="81.0" layoutY="104.0" text="Tên khách hàng">
+                     <font>
+                        <Font name="Arial Italic" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="80.0" layoutY="51.0" text="Mã Khách Hàng">
+                     <font>
+                        <Font name="Arial Italic" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="110.0" layoutY="152.0" text="Địa chỉ">
+                     <font>
+                        <Font name="Arial Italic" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="99.0" layoutY="206.0" text="Tích Điểm">
+                     <font>
+                        <Font name="Arial Italic" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="108.0" layoutY="67.0" text="KH001">
+                     <font>
+                        <Font name="Arial Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="70.0" layoutY="120.0" text="Nguyễn Công  Danh">
+                     <font>
+                        <Font name="Arial Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="21.0" layoutY="168.0" text="Bạch Đằng, Tân Bình, Hồ Chí Minh">
+                     <font>
+                        <Font name="Arial Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="121.0" layoutY="222.0" text="1000">
+                     <font>
+                        <Font name="Arial Bold" size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+         </right>
       </BorderPane>
    </children>
 </StackPane>
