--- a/src/main/java/com/quanlysieuthi/quanlysieuthimini/view/TrangChu.fxml
+++ b/src/main/java/com/quanlysieuthi/quanlysieuthimini/view/TrangChu.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
-
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -17,12 +19,12 @@
                <children>
                   <AnchorPane layoutX="332.0" layoutY="-19.0" prefHeight="93.6" prefWidth="1600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Label layoutX="1341.0" layoutY="47.0" text="Welcome,">
+                        <Label layoutX="1355.0" layoutY="38.0" text="Welcome,">
                            <font>
                               <Font name="Arial" size="15.0" />
                            </font>
                         </Label>
-                        <Label layoutX="1408.0" layoutY="46.0" text="Nguyễn Công Danh">
+                        <Label layoutX="1422.0" layoutY="37.0" text="Nguyễn Công Danh">
                            <font>
                               <Font name="Arial Bold" size="16.0" />
                            </font>
@@ -40,49 +42,141 @@
                </children>
             </AnchorPane>
          </top>
-         <left>
-            <AnchorPane prefHeight="688.0" prefWidth="272.0" BorderPane.alignment="CENTER">
-               <children>
-                  <AnchorPane layoutX="14.0" layoutY="123.0" prefHeight="688.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                     <children>
-                        <Button layoutX="61.0" layoutY="47.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Button">
-                           <font>
-                              <Font name="Arial" size="18.0" />
-                           </font>
-                        </Button>
-                        <Button layoutX="61.0" layoutY="98.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Button" AnchorPane.topAnchor="100.0">
-                           <font>
-                              <Font name="Arial" size="18.0" />
-                           </font>
-                        </Button>
-                        <Button layoutX="61.0" layoutY="150.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Button">
-                           <font>
-                              <Font name="Arial" size="18.0" />
-                           </font>
-                        </Button>
-                        <Button layoutX="61.0" layoutY="207.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Button">
-                           <font>
-                              <Font name="Arial" size="18.0" />
-                           </font>
-                        </Button>
-                        <Button layoutX="61.0" layoutY="266.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Button">
-                           <font>
-                              <Font name="Arial" size="18.0" />
-                           </font>
-                        </Button>
-                        <FontAwesomeIconView glyphName="SIGN_OUT" layoutX="14.0" layoutY="655.0" selectionEnd="1" size="32" wrappingWidth="12.0" />
-                        <Label layoutX="46.0" layoutY="633.0" text="Đăng Xuất">
-                           <font>
-                              <Font name="Arial Bold" size="18.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-               </children>
-            </AnchorPane>
-         </left>
          <center>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <GridPane layoutY="-7.0" prefHeight="706.6666666666666" prefWidth="1600.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-7.0">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <AnchorPane prefHeight="225.0" prefWidth="513.0">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="197.0" layoutY="127.0" text="BÀN HÀNG">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="SHOPPING_CART" layoutX="234.0" layoutY="104.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="212.0" layoutY="132.0" text="GIAO CA">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="USERS" layoutX="233.0" layoutY="109.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="194.0" layoutY="132.0" text="Khuyến Mãi">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="TAGS" layoutX="233.0" layoutY="104.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="121.0" layoutY="126.0" text="THANH TOÁN TẠI QUẦY">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="CREDIT_CARD" layoutX="234.0" layoutY="104.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="207.0" layoutY="127.0" text="BÁO CÁO">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="TABLE" layoutX="233.0" layoutY="104.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="230.0" layoutY="125.0" text="KHO">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="CUBES" layoutX="233.0" layoutY="104.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="132.0" layoutY="128.0" text="QUẢN LÝ THÔNG TIN">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="COG" layoutX="234.0" layoutY="104.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="135.0" layoutY="126.0" text="THÔNG TIN CÁ NHÂN">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="ID_CARD" layoutX="233.0" layoutY="104.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </GridPane.margin>
+                           <children>
+                              <Label layoutX="188.0" layoutY="137.0" text="HƯỚNG DẪN">
+                                 <font>
+                                    <Font name="System Bold" size="24.0" />
+                                 </font>
+                              </Label>
+                              <FontAwesomeIconView glyphName="INFO_CIRCLE" layoutX="243.0" layoutY="114.0" size="50" />
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </GridPane>
+               </children></AnchorPane>
          </center>
       </BorderPane>
    </children>
