--- a/src/main/java/com/quanlysieuthi/quanlysieuthimini/view/GiaoCa.fxml
+++ b/src/main/java/com/quanlysieuthi/quanlysieuthimini/view/GiaoCa.fxml
@@ -1,147 +1,235 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import java.net.URL?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
-
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1530.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <top>
-            <AnchorPane prefHeight="88.0" prefWidth="1530.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="59.0" prefWidth="1530.0" styleClass="top-form" stylesheets="@../css/GiaoCa.css" BorderPane.alignment="CENTER">
                <children>
-                  <Pane layoutX="186.0" layoutY="-56.0" prefHeight="94.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="780.0" AnchorPane.topAnchor="0.0">
+                  <Pane layoutX="186.0" layoutY="-56.0" prefHeight="88.0" prefWidth="1530.0" styleClass="top-form" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Label layoutX="292.0" layoutY="38.0" text="Giờ Đầu Ca:">
+                        <Label layoutX="72.0" layoutY="19.0" text="Đóng Ca Làm Việc:" textFill="WHITE">
                            <font>
                               <Font name="Arial Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="406.0" layoutY="38.0" text="Thời Gian">
+                        <Label layoutX="248.0" layoutY="19.0" text="Thời Gian" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="394.0" layoutY="19.0" text="Người Bàn Giao:" textFill="WHITE">
+                           <font>
+                              <Font name="Arial Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="570.0" layoutY="19.0" text="Nhân Viên" textFill="WHITE">
                            <font>
                               <Font name="Arial Bold" size="18.0" />
                            </font>
                         </Label>
                      </children>
-                  </Pane>
-                  <Pane layoutX="753.0" layoutY="5.0" prefHeight="88.0" prefWidth="770.0">
-                     <children>
-                        <Label layoutX="216.0" layoutY="38.0" text="Giờ Hiện Tại:">
-                           <font>
-                              <Font name="Arial Bold" size="18.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="330.0" layoutY="38.0" text="Thời Gian">
-                           <font>
-                              <Font name="Arial Bold" size="18.0" />
-                           </font>
-                        </Label>
-                     </children>
+                     <stylesheets>
+                        <URL value="@../css/GiaoCa.css" />
+                        <URL value="@../css/GiaoCaCss.css" />
+                     </stylesheets>
                   </Pane>
                </children>
             </AnchorPane>
          </top>
          <left>
-            <AnchorPane prefHeight="412.0" prefWidth="784.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="668.0" prefWidth="482.0" stylesheets="@../css/GiaoCa.css" BorderPane.alignment="CENTER">
                <children>
-                  <Label layoutX="103.0" layoutY="35.0" text="Tiền Đầu Ca:">
+                  <TitledPane animated="false" prefHeight="640.6666666666666" prefWidth="482.0" text="Giao Dịch Trong Ca" textFill="#5969eb" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="77.0" layoutY="88.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Bán Hàng:">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="TOP_RIGHT" layoutX="222.0" layoutY="88.0" prefHeight="27.0" prefWidth="143.0" text="Bán Hàng:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="78.0" layoutY="138.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Tiền Mặt:">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="TOP_RIGHT" layoutX="223.0" layoutY="138.0" prefHeight="27.0" prefWidth="143.0" text="Bán Hàng:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="78.0" layoutY="193.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Thẻ:">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="TOP_RIGHT" layoutX="223.0" layoutY="193.0" prefHeight="27.0" prefWidth="143.0" text="Bán Hàng:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="78.0" layoutY="254.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Khuyến Mãi:">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="TOP_RIGHT" layoutX="223.0" layoutY="254.0" prefHeight="27.0" prefWidth="143.0" text="Bán Hàng:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="78.0" layoutY="311.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Ghi Nợ:">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="TOP_RIGHT" layoutX="223.0" layoutY="311.0" prefHeight="27.0" prefWidth="143.0" text="Bán Hàng:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Line endX="320.33331298828125" endY="-3.0517578125E-5" layoutX="121.0" layoutY="400.0" startX="-100.0" />
+                              <Label layoutX="61.0" layoutY="422.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Tổng tiền mặt  thu:">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="280.0" layoutY="422.0" prefHeight="27.0" prefWidth="143.0" text="Bán Hàng:">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                    </content>
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
-                  </Label>
-                  <TextField disable="true" layoutX="257.0" layoutY="36.0" prefHeight="30.0" prefWidth="200.0" />
+                  </TitledPane>
                </children>
             </AnchorPane>
          </left>
-         <bottom>
-            <AnchorPane prefHeight="107.0" prefWidth="1530.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label layoutX="68.0" layoutY="45.0" text="Nhân Viên:">
-                     <font>
-                        <Font name="Arial Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="179.0" layoutY="45.0" text="Nguyễn Công Danh">
-                     <font>
-                        <Font name="Arial Bold" size="18.0" />
-                     </font>
-                  </Label>
-                  <Button layoutX="836.0" layoutY="43.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="KẾT CA">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="CHECK" wrappingWidth="21.3333740234375" />
-                     </graphic>
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="1029.0" layoutY="43.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="236.0" text="KẾT CA VÀ IN PHIẾU">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="PRINT" wrappingWidth="21.3333740234375" />
-                     </graphic>
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="1291.0" layoutY="43.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="THOÁT">
-                     <graphic>
-                        <FontAwesomeIconView glyphName="SIGN_OUT" wrappingWidth="21.3333740234375" />
-                     </graphic>
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Button>
-               </children>
-            </AnchorPane>
-         </bottom>
          <center>
-            <AnchorPane prefHeight="499.0" prefWidth="779.0" BorderPane.alignment="CENTER">
+            <AnchorPane prefHeight="533.0" prefWidth="593.0" styleClass="top-form" stylesheets="@../css/GiaoCa.css" BorderPane.alignment="CENTER">
                <children>
-                  <Label layoutX="108.0" layoutY="52.0" text="Tiền Đầu Ca:">
+                  <Label layoutX="68.0" layoutY="54.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Tiền Mặt">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField disable="true" layoutX="262.0" layoutY="53.0" prefHeight="30.0" prefWidth="200.0" />
-                  <Label layoutX="108.0" layoutY="113.0" text="Tiền Đầu Ca:">
+                  <Label layoutX="202.0" layoutY="90.0" text="Đầu ca:">
+                     <font>
+                        <Font name="System Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="108.0" layoutY="146.0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField disable="true" layoutX="262.0" layoutY="114.0" prefHeight="30.0" prefWidth="200.0" />
-                  <Label layoutX="108.0" layoutY="184.0" text="Tiền Đầu Ca:">
+                  <Label layoutX="68.0" layoutY="216.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Tiền Bàn Giao:">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField disable="true" layoutX="262.0" layoutY="185.0" prefHeight="30.0" prefWidth="200.0" />
-                  <Label layoutX="108.0" layoutY="250.0" text="Tiền Đầu Ca:">
+                  <TextField disable="true" layoutX="364.0" layoutY="216.0" prefHeight="30.0" prefWidth="200.0" />
+                  <Label layoutX="200.0" layoutY="132.0" text="Cuối ca:">
+                     <font>
+                        <Font name="System Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="TOP_RIGHT" layoutX="364.0" layoutY="97.0" prefWidth="200.0" text="Đầu ca:">
+                     <font>
+                        <Font name="System Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="TOP_RIGHT" layoutX="362.0" layoutY="139.0" prefWidth="200.0" text="Cuối ca:">
+                     <font>
+                        <Font name="System Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="68.0" layoutY="280.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Số lượng hóa đơn:">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField disable="true" layoutX="262.0" layoutY="251.0" prefHeight="30.0" prefWidth="200.0" />
-                  <Label layoutX="108.0" layoutY="311.0" text="Tiền Đầu Ca:">
+                  <TextField disable="true" layoutX="364.0" layoutY="280.0" prefHeight="30.0" prefWidth="200.0" />
+                  <Label layoutX="68.0" layoutY="346.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Số lượng voucher">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField disable="true" layoutX="262.0" layoutY="312.0" prefHeight="30.0" prefWidth="200.0" />
-                  <Label layoutX="108.0" layoutY="388.0" text="Tiền Đầu Ca:">
+                  <TextField disable="true" layoutX="364.0" layoutY="346.0" prefHeight="30.0" prefWidth="200.0" />
+                  <TextArea layoutX="16.0" layoutY="479.0" prefHeight="85.0" prefWidth="563.0" promptText="Ghi Chú" />
+                  <TextArea layoutX="16.0" layoutY="409.0" prefHeight="41.0" prefWidth="349.0" promptText="Người nhân bàn giao..." />
+                  <Label layoutX="223.0" layoutY="14.0" styleClass="text-form" stylesheets="@../css/GiaoCaCss.css" text="Bàn Giao Ca" textFill="#5969eb">
                      <font>
-                        <Font name="System Bold" size="18.0" />
+                        <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <TextField disable="true" layoutX="262.0" layoutY="389.0" prefHeight="30.0" prefWidth="200.0" />
                </children>
             </AnchorPane>
          </center>
+         <right>
+            <AnchorPane prefHeight="533.0" prefWidth="451.0" stylesheets="@../css/GiaoCa.css" BorderPane.alignment="CENTER">
+               <children>
+                  <Button layoutX="181.0" layoutY="65.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="150.0" styleClass="button-form" stylesheets="@../css/GiaoCaCss.css" text="KẾT CA">
+                     <graphic>
+                        <FontAwesomeIconView fill="#fbfbfb" glyphName="CHECK" wrappingWidth="21.3333740234375" />
+                     </graphic>
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button layoutX="181.0" layoutY="167.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="150.0" styleClass="button-form" stylesheets="@../css/GiaoCaCss.css" text="IN PHIẾU">
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITE" glyphName="PRINT" wrappingWidth="21.3333740234375" />
+                     </graphic>
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button layoutX="182.0" layoutY="271.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="150.0" styleClass="button-form" stylesheets="@../css/GiaoCaCss.css" text="THOÁT">
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITE" glyphName="SIGN_OUT" wrappingWidth="21.3333740234375" />
+                     </graphic>
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+            </AnchorPane>
+         </right>
       </BorderPane>
    </children>
 </StackPane>
