--- a/src/main/java/com/quanlysieuthi/quanlysieuthimini/css/TrangChuCss.css
+++ b/src/main/java/com/quanlysieuthi/quanlysieuthimini/css/TrangChuCss.css
@@ -1,5 +1,5 @@
 .top-form{
-    -fx-background-color: linear-gradient(to right, #4dd9db, #34495e);
+    -fx-background-color: linear-gradient(to right, #f39c12,#d08d30 , #ffd597);
     -fx-text-fill: white;
 }
 .panel-banhang {
