--- a/src/main/java/com/quanlysieuthi/quanlysieuthimini/css/BanHangCss.css
+++ b/src/main/java/com/quanlysieuthi/quanlysieuthimini/css/BanHangCss.css
@@ -1,9 +1,9 @@
 .top-form{
-    -fx-background-color: linear-gradient(to right, #4dd9db, #34495e);
+    -fx-background-color: linear-gradient(to right, #f39c12,#ffd597);
     -fx-text-fill: white;
 }
 .left-form{
-    -fx-background-color: linear-gradient(to bottom, #4dd9db, #34495e);
+    -fx-background-color: linear-gradient(to bottom, #f39c12  , #ffd597);
     -fx-text-fill: white;
     -fx-background-radius: 2px;
 }
@@ -11,7 +11,7 @@
 .text-field{
     -fx-background-color: linear-gradient(to bottom, #efefef, #eee);
     -fx-background-radius: 4px;
-    -fx-border-color:linear-gradient(to bottom, #449d6b , #34495e);
+    -fx-border-color:linear-gradient(to bottom, #449d6b , #ffd597);
     -fx-border-radius: 4px;
     -fx-border-width: 1px;
 }
@@ -20,14 +20,14 @@
     -fx-background-color: #fff;
 }
 .button{
-    -fx-background-color: linear-gradient(to right, #4dd9db, #34495e);
+    -fx-background-color: linear-gradient(to right, #f39c12  , #ffd597);
     -fx-cursor: hand;
     -fx-font-size: 18px;
     -fx-text-fill: #fff;
     -fx-background-radius: 8px;
 }
 .button:hover{
-    -fx-background-color: linear-gradient(to right, #4dd9db, #4dd9db);
+    -fx-background-color: linear-gradient(to right, #f39c12, #f39c12);
 }
 .icon{
     -fx-background-color: transparent;
@@ -35,11 +35,11 @@
 }
 .icon:hover{
     -fx-border-width: 2px;
-    -fx-background-color: linear-gradient(to right, #4dd9db, #4dd9db);
+    -fx-background-color: linear-gradient(to right, #f39c12, #f39c12);
 }
 .search{
-    -fx-background-color: linear-gradient(to right, #4dd9db, #34495e);
-    -fx-border-color: linear-gradient(to right, #4dd9db, #34495e);
+    -fx-background-color: linear-gradient(to right, #f39c12 , #ffd597);
+    -fx-border-color: linear-gradient(to right, #f39c12  , #ffd597);
     -fx-border-width: 1px;
     -fx-border-radius: 4px;
 }
@@ -49,12 +49,12 @@
 .table-view{
     -fx-background-color: transparent;
     -fx-padding: 0px;
-    -fx-border-color: linear-gradient(to right, #4dd9db, #34495e);
+    -fx-border-color: linear-gradient(to right, #f39c12 , #ffd597);
     -fx-border-width: 2px;
     -fx-border-radius: 8px;
 }
 .table-view .column-header-background{
-    -fx-background-color: linear-gradient(to right, #4dd9db, #34495e);
+    -fx-background-color: linear-gradient(to right, #f39c12  , #ffd597);
     -fx-background-radius: 8px 8px 0px 0px;
     -fx-background-insets: 0 0 0 0;
 }
@@ -76,7 +76,7 @@
     -fx-font-weight: bold;
 }
 .label:hover{
-   -fx-background-color: #4dd9db;
+   -fx-background-color: #f39c12;
     -fx-background-radius: 8px;
     -fx-padding: 5px;
 }
